--- a/components/CTASection.html
+++ b/components/CTASection.html
@@ -19,7 +19,7 @@
 
       <!-- Description -->
       <p class="fade-up delay-3">
-        Join over 50,000 students already learning on EduLearn.
+        Join over 50,000 students already learning on EduTech.
         Get unlimited access to all courses for one low monthly price.
       </p>
 
