--- a/components/Footer.html
+++ b/components/Footer.html
@@ -6,7 +6,7 @@
       <div class="footer-brand">
         <a href="#" class="brand">
           <div class="brand-icon">🎓</div>
-          <span class="brand-name">EduLearn</span>
+          <span class="brand-name">EduTech</span>
         </a>
 
         <p class="brand-desc">
@@ -14,7 +14,7 @@
         </p>
 
         <div class="contact-info">
-          <a href="mailto:hello@edulearn.com">✉ hello@edulearn.com</a>
+          <a href="mailto:hello@EduTech.com">✉ hello@EduTech.com</a>
           <a href="tel:+1234567890">📞 +1 (234) 567-890</a>
           <div>📍 San Francisco, CA</div>
         </div>
