--- a/components/TestimonialsSection.html
+++ b/components/TestimonialsSection.html
@@ -4,7 +4,7 @@
     <div class="testimonials-header fade-up">
       <h2>What Our Students Say</h2>
       <p>
-        Hear from thousands of students who have transformed their careers with EduLearn.
+        Hear from thousands of students who have transformed their careers with EduTech.
       </p>
     </div>
 
@@ -19,7 +19,7 @@
         </div>
 
         <p class="testimonial-text">
-          "EduLearn completely transformed my career. The web development course was comprehensive and the instructors were incredibly supportive."
+          "EduTech completely transformed my career. The web development course was comprehensive and the instructors were incredibly supportive."
         </p>
 
         <div class="author">
